# Typola

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  MISSION.md  Markdown编辑器-规划文档.md  NOTES.md  NOTICE  PRODUCT.md  README.en.md  README.md  README_zh.md  RELEASE_NOTES.md  RESOURCES.md  design.md  feature-list.json  index.html  md-editor-ai-markdown.md  package-lock.json  package.json  perf-budget.json  pnpm-lock.yaml  test-fake-uploader.bat  test-mermaid.md  tsconfig.json  vision.md  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.review-173/: app-new.css  fixes.patch  i18n.ts  issue-167.md  pr-173-after.diff  pr-173.diff  review-body.md
.vibeflow/: plan-value-review.md
assets/: lesson-base.css
config/: eslint.config.js  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite-plugin-perf-stub.ts  vite.config.ts
design/: Markdown编辑器-规划文档.md  design.md  export-pandoc-roadmap.md  md-editor-ai-markdown.md  spec-electron.md  spec.md  vision.md
docs/: AI_DIFF_PREVIEW_SPEC.md  AI_DOCUMENT_WORKBENCH_SCENARIO_ROADMAP.md  AI_EDIT_AND_REVIEW_SPEC.md  AI_REVIEW_DESIGN.md  AI_REVIEW_INTERACTION_SPEC.md  AI_WORKBENCH_OPENCODE_PRD.md  AI_WORKBENCH_SKILL_OS.md  AI_WORKBENCH_SPEC.md  ARCHITECTURE.md  AUTOMATION_MVP_DESIGN.md  IMAGE_DISPLAY_SPEC.md  IMAGE_INSERT_SPEC.md  MERMAID_SPEC.md  PDF_EXPORT_SPEC.md  REVIEW_SKILL_OS_M1.md  THEME_SYSTEM_SPEC.md  TYPOLA_AI_RND_METHODS_SHARE.md  USER_GUIDE.md  handoff-skill-os-m1.md  typola_calm_workspace_design.md
e2e/: cm6-fold-search.spec.ts  cm6-format-history.spec.ts  cm6-image.spec.ts  cm6-ime.spec.ts  cm6-table.spec.ts  define-color-editor.spec.ts  editor-paper-bg.spec.ts  layout-behavior.spec.ts  preview-resources.spec.ts  question-form.spec.ts  wysiwyg-bold-marker.spec.ts
electron/: aiConfig.ts  electron.d.ts  export.ts  fileTree.ts  fileWatch.ts  main.js  main.ts  openTargets.ts  preload.js  preload.ts  recentFiles.ts  terminal.ts
learning-records/: 0001-typola-tutorial-workspace.md
lessons/: 0000-day-one.html  0001-floating-bar.html  0002-workbench-open.html  0003-context-chips.html  0004-skillhub-scenes.html  0005-review-diff.html  0006-pill-conversations.html  0007-artifact-center.html  0008-delivery-offline.html  README.md  Typola-tutorial.html
mocks/: README.md  mock-agent.mjs
public/: pdf-print-shell.html
reference/: typola-cheatsheet.html
scripts/: audit-theme-contrast.mjs  build-portable.mjs  build-themes.mjs  check-version-sync.mjs  create-updater-manifest.d.mts  create-updater-manifest.mjs  patchWindowsExecutable.cjs  (+6 more)
src/: App.tsx  (+1 more)
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  export.rs  file.rs  lib.rs  main.rs  perf.rs  watcher.rs
src-tauri/windows/: hooks.nsh  main.wxs
(+576 files in other folders)
