[package]
name = "typola"
version = "0.1.0"
description = "AI-friendly local Markdown editor for Windows"
authors = ["Typola"]
edition = "2021"

[lib]
name = "typola_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
