[package]
name = "typola"
version = "2.0.5"
description = "A lightweight Markdown editor with HTML, Word export, and terminal support"
authors = ["Typola contributors"]
license = "Apache-2.0"
repository = "https://github.com/ttttstc/Typola"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
portable-pty = "0.9"
tauri-plugin-single-instance = "2.4.2"
notify = "8.2.0"
tauri-plugin-opener = "2.5.4"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
